added content to my site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	</head>
 	
 	<body>
-	
+		<h1>My Website!</h1>
+		
+		<h2>Favorite Internet Things</h2>
+		
+		<h3><a href="http://www.google.com">GOOGLE</a></h3>
+		<img src="http://placekitten.com/200/300" alt="picture of a cat">
+		<p>Google is the best and is a super clean website.</p>
 	</body>
 </html>
