--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<body>
 		<h1>My Website!</h1>
 		
-		<h2>Favorite Internet Things</h2>
+		<h2>Here is a Really Cool Thing I Found on the Internet</h2>
 		
-		<h3><a href="http://www.google.com">GOOGLE</a></h3>
-		<img src="http://placekitten.com/200/300" alt="picture of a cat">
-		<p>Google is the best and is a super clean website.</p>
+		<h3><a href="http://www.youthedesigner.com/">This Graphic Design Website</a></h3>
+	
+		<p>I really like that the rest of the website looks like it's floating in front of the header image! Cool.</p>
 	</body>
 </html>
