--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html>
 	<head>
 		<title>My Website</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="stylesheets/base.css">
+		<link rel="stylesheet" href="stylesheets/skeleton.css">
+		<link rel="stylesheet" href="stylesheets/layout.css">
 	</head>
 	
 	<body>
-		<h1>My Website!</h1>
+		<div class="container">
+			<div class="eight columns">
+			<h1>My Website!</h1>
 		
 		<h2>Here is a Really Cool Thing I Found on the Internet</h2>
 		
 		<h3><a href="http://www.youthedesigner.com/">This Graphic Design Website</a></h3>
 	
 		<p>I really like that the rest of the website looks like it's floating in front of the header image! Cool.</p>
-	</body>
+		</div> <!--/.eight columns-->
+			<div class="four columns">
+				<h2>Sidebar</h2>
+			</div><!--/.four columns-->
+		</div>
+			</body>
 </html>
